@@ -1,3 +1,8 @@
+2004-03-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCglue.c (printIvalPtr): fixed bug with pointer initializer
+	reported by Adam Wozniak in Sdcc-user list
+
 2004-03-10 Bernhard Held <bernhard AT bernhardheld.de>
 	
 	* src/SDCCast.c (decorateType): fixed with bug and promotion in
